BugFix: linkToRoot, first public version for basic-tests

--- a/css/own.css
+++ b/css/own.css
@@ -1,7 +1,5 @@
 /* Developer: leo7044 */
-
-/* Optik div-Container */
-.own-jumbotron-div-content
+.own-jumbotron-bgcolor
 {
 	background-color: #F8F8FF;
 }
