--- a/css/own.css
+++ b/css/own.css
@@ -9,6 +9,16 @@
 	height: 500px;
 }
 
+.list-group
+{
+	margin-bottom: 20px !important;
+}
+
+.modal-xl
+{
+	max-width: 90%
+}
+
 a
 {
 	cursor: pointer;
